--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
 	padding: 0;
 	margin: 0;
@@ -6,5 +10,5 @@
 }
 
 body {
-	height: 100vh;
+	min-height: 100vh;
 }
