--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -12,3 +12,14 @@
 body {
 	min-height: 100vh;
 }
+
+@media screen and (min-width: 768px) {
+	:root {
+		font-size: calc(18px + 2 * ((100vw - 768px) / 598));
+	}
+}
+@media screen and (min-width: 1366px) {
+	:root {
+		font-size: 20px;
+	}
+}
