:sparkles: Add address input autocomplete

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 .custom-input {
-	@apply input input-xs bg-transparent text-inherit focus:border-base-100 relative overflow-ellipsis border-slate-300 disabled:opacity-40;
+	@apply input input-sm bg-transparent text-inherit focus:border-base-100 relative overflow-ellipsis border-slate-300 disabled:opacity-40;
 }
 
 .custom-input-invalid {
