--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -41,3 +41,7 @@ body {
 		2px 0 0 0 #000 inset,
 		0 2px 0 0 #000 inset;
 }
+
+.custom-table {
+	@apply table table-sm overflow-x-auto bg-custom-white rounded-md shadow-md w-full;
+}
