🖌️ Design customer lookup page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -45,3 +45,8 @@ body {
 .custom-table {
 	@apply table table-sm overflow-x-auto bg-custom-white rounded-md shadow-md w-full;
 }
+
+.grid-divider {
+	display: grid;
+	grid-template-columns: 1fr 3em 1fr;
+}
